--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,8 @@ permalink: /:categories/:path/
 #paginate: 5 # amount of posts to show
 #paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+baseurl: "/Durham-HPC-Days-2026"
+url: "https://mzhc13.github.io"
 
 include:
   - _pages
