--- a/_config.yml
+++ b/_config.yml
@@ -120,6 +120,9 @@ collections:
   programme-empty:
     output: true
     permalink: /programme-empty/:path/
+  tutorials:
+    output: true
+    permalink: /tutorials/:name/
 
 category_archive:
   type: liquid
