--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,19 @@ main:
     url: /call-for-sessions/
   - title: "Programme"
     url: /programme-empty/
+  - title: "Tutorials"
+    url: /tutorials/
+    children:
+    - title: "Node-level performance optimisation "
+      url: /tutorials/node-level-performance-optimisation/
+    - title: "NVIDIA Multi-GPU Programming"
+      url: /tutorials/nvidia-multi-gpu-programming/
+    - title: "Green HPC"
+      url: /tutorials/green-hpc/
+    - title: "Tensorrent"
+      url: /tutorials/tensorrent/
   - title: "Sponsors"
     url: /sponsors/
   - title: "Past Durham HPC Days"
     url: /past/
+   
