--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,13 +7,13 @@ main:
     url: /tutorials/
     children:
     - title: "Node-level performance optimisation "
-      url: Durham-HPC-Days-2026/tutorials/node-level-performance-optimisation/
+      url: tutorials/node-level-performance-optimisation/
     - title: "NVIDIA Multi-GPU Programming"
-      url: Durham-HPC-Days-2026/tutorials/nvidia-multi-gpu-programming/
+      url: tutorials/nvidia-multi-gpu-programming/
     - title: "Green HPC"
-      url: Durham-HPC-Days-2026/tutorials/green-hpc/
+      url: tutorials/green-hpc/
     - title: "Tensorrent"
-      url: Durham-HPC-Days-2026/tutorials/tensorrent/
+      url: tutorials/tensorrent/
   - title: "Programme"
     url: /programme-empty/
   - title: "Sponsors"
