added call for talks

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,8 @@ main:
     url: /register/
   - title: "Call for Sessions"
     url: /call-for-sessions/
+  - title: "Call for Talks"
+    url: /call-for-talks/
   - title: "Tutorials"
     url: /tutorials/
   - title: "Programme"
