--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
   - title: "Tutorials"
     url: /tutorials/
   - title: "Programme"
-    url: /programme-empty/
+    url: /programme-2026/
   - title: "Sponsors"
     url: /sponsors/
   - title: "Past Durham HPC Days"
